# denoise-plugin

./: .gitignore  .gitmodules  Package.swift  Package@swift-5.9.swift  README.md  jitpack.yml
.github/workflows/: build-and-verify.yml
DeepFilterNet/demo/src/: capture.rs  main.rs
DeepFilterNet/libDF/: Cargo.toml
DeepFilterNet/libDF/src/: capi.rs  tract.rs  wasm.rs
jni/: CMakeLists.txt  audio_pipeline_jni.c
js/: .prettierrc  Dockerfile  README.md  build.sh  package-lock.json  package.json  rollup.config.cjs  tsconfig.json  webpack.worklet.config.js
js/scripts/: build-deepfilter-artifacts.mjs  clean-dist.mjs
js/src/: AudioPipelineTrackProcessor.ts  AudioPipelineWorker.ts  AudioPipelineWorklet.ts  DenoiseTrackProcessor.ts  DenoiserWorker.ts  DenoiserWorklet.ts  free-queue.js  index.ts  options.ts  sharedMemory.ts
js/src/shared/: BufferPool.ts  command-transport.ts  contracts.ts  normalize.ts  transfer.ts  wasm-loader.ts  worker-contracts.ts
js/src/worklet/: Float32ArrayPool.ts  MonoRingBuffer.ts
js/src/worklet/modules/: AudioProcessingModule.ts  DeepFilterModule.ts  DenoiseModule.ts  RnnoiseModule.ts
kotlin/: build_deepfilter.sh  build_native.sh  build_rnnoise.sh  exports.map  gradle.properties  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/androidTest/java/com/github/TempTalkOrg/denoisefilter/: ExampleInstrumentedTest.kt
kotlin/app/src/main/: AndroidManifest.xml
kotlin/app/src/main/res/values/: strings.xml  themes.xml
kotlin/app/src/main/res/values-night/: themes.xml
kotlin/app/src/test/java/com/github/TempTalkOrg/denoisefilter/: ExampleUnitTest.kt
kotlin/audio-pipeline/: build.gradle.kts  gradle.properties
kotlin/audio-pipeline/src/androidTest/java/com/github/TempTalkOrg/audio_pipeline/: ExampleInstrumentedTest.kt
kotlin/audio-pipeline/src/main/java/com/github/TempTalkOrg/audio_pipeline/: AudioPipelineProcessor.kt
kotlin/denoise-filter/: build.gradle.kts  gradle.properties
kotlin/denoise-filter/src/androidTest/assets/: bgvoice.s16le
kotlin/gradle/: gradle-mvn-push.gradle  libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
rnnoise/: Info.plist  Info_ios.plist  Info_macos.plist  Makefile.am  README  configure.ac  download_model.sh
rnnoise/examples/: rnnoise_demo.c
rnnoise/include/: RNNoiseObjC.h  rnnoise.h
rnnoise/src/: RNNoiseObjC.m  denoise.c  dump_features.c  rnnoise_jni.c
scripts/: release.sh
swift/: Package.swift  Package@swift-5.9.swift
(+12 files in other folders)
